--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,6 +1,6 @@
 OBJS 	= medoids.o chain.o hash.o distances.o matrixMedoid.o inputProcessing.o initialization.o assignment.o
 SOURCE	= medoids.c chain.c hash.c distances.c matrixMedoid.c inputProcessing.c initialization.c assignment.c
-HEADER  = medoids.h chain.h hash.h distances.h matrixMedoid.h inputProcessing.h initialization.h assignment.h
+HEADER  = medoids.h chain.h hash.h distances.h matrixMedoid.h inputProcessing.h structure.h
 OUT  	= medoids
 CC	    = gcc
 FLAGS   = -g -c 	
@@ -26,13 +26,13 @@ distances.o: distances.c distances.h
 inputProcessing.o: inputProcessing.c inputProcessing.h
 	$(CC) $(FLAGS) inputProcessing.c
 	
-initialization.o: initialization.c initialization.h
+initialization.o: initialization.c structure.h
 	$(CC) $(FLAGS) initialization.c
 	
-assignment.o: assignment.c assignment.h
+assignment.o: assignment.c structure.h
 	$(CC) $(FLAGS) assignment.c	
 
-matrixMedoid.o: matrixMedoid.c matrixMedoid.h hash.h
+matrixMedoid.o: matrixMedoid.c matrixMedoid.h
 	$(CC) $(FLAGS) matrixMedoid.c		
 	
 # clean house
