--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,6 +1,6 @@
-OBJS 	= medoids.o chain.o hash.o distances.o matrixMedoid.o inputProcessing.o initialization.o assignment.o update.o
-SOURCE	= medoids.c chain.c hash.c distances.c matrixMedoid.c inputProcessing.c initialization.c assignment.c update.c
-HEADER  = medoids.h chain.h hash.h distances.h matrixMedoid.h inputProcessing.h structure.h
+OBJS 	= medoids.o chain.o hash.o distances.o matrixMedoid.o inputProcessing.o initialization.o assignment.o update.o silhouette.o algorithms.o vectorMedoid.o
+SOURCE	= medoids.c chain.c hash.c distances.c matrixMedoid.c inputProcessing.c initialization.c assignment.c update.c silhouette.c algorithms.c vectorMedoid.c
+HEADER  = medoids.h chain.h hash.h distances.h medoids.h inputProcessing.h structure.h silhouette.h algorithms.h
 OUT  	= medoids
 CC	    = gcc
 FLAGS   = -g -c 	
@@ -11,7 +11,7 @@ all: $(OBJS)
 	$(CC) -g $(OBJS) -o $(OUT) -lm
 
 # create/compile the individual files >>separately<< 
-medoids.o: medoids.c matrixMedoid.h
+medoids.o: medoids.c medoids.h
 	$(CC) $(FLAGS) medoids.c
 
 chain.o: chain.c chain.h distances.h
@@ -34,9 +34,18 @@ assignment.o: assignment.c structure.h
 	
 update.o: update.c structure.h
 	$(CC) $(FLAGS) update.c	
+	
+silhouette.o : silhouette.c silhouette.h
+	$(CC) $(FLAGS) silhouette.c
 
-matrixMedoid.o: matrixMedoid.c matrixMedoid.h
-	$(CC) $(FLAGS) matrixMedoid.c		
+algorithms.o : algorithms.c algorithms.h
+	$(CC) $(FLAGS) algorithms.c
+
+matrixMedoid.o: matrixMedoid.c medoids.h
+	$(CC) $(FLAGS) matrixMedoid.c	
+	
+vectorMedoid.o: vectorMedoid.c medoids.h
+	$(CC) $(FLAGS) vectorMedoid.c
 	
 # clean house
 clean:
